--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,8 @@
-icewm -- authors file.  2020-08-31
+icewm -- authors file.  2020-09-08
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
 Author: Eduard Bloch <blade@debian.org>
+Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: Code7R <Code7R@users.noreply.github.com>
 Author: WhiredPlanck <47623588+whriedplanck@users.noreply.github.com>
 Author: DieSpinne <62444221+DieSpinne@users.noreply.github.com>
